update azure cn

--- a/WebApp/WebApp/Web.config
+++ b/WebApp/WebApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TasteContext" connectionString="metadata=res://*/TasteContext.csdl|res://*/TasteContext.ssdl|res://*/TasteContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=taste2.database.windows.net;initial catalog=taste;persist security info=True;user id=taste;password=Wechat2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TasteContext" connectionString="metadata=res://*/TasteContext.csdl|res://*/TasteContext.ssdl|res://*/TasteContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=taste.database.chinacloudapi.cn;initial catalog=taste;persist security info=True;user id=taste;password=Wechat2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="WeChatMiniProgramAppId" value="wx5322fd632feee9b2" />
