--- a/WebApp/WebApp/Web.config
+++ b/WebApp/WebApp/Web.config
@@ -12,8 +12,8 @@
     <add name="TasteContext" connectionString="metadata=res://*/TasteContext.csdl|res://*/TasteContext.ssdl|res://*/TasteContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=taste.database.chinacloudapi.cn;initial catalog=taste;persist security info=True;user id=taste;password=Wechat2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="WeChatMiniProgramAppId" value="wx5322fd632feee9b2" />
-    <add key="WeChatMiniProgramAppSecret" value="e0704e11c8c3da3e30ec3369eb895343" />
+    <add key="WeChatMiniProgramAppId" value="wx85137f0c169973eb" />
+    <add key="WeChatMiniProgramAppSecret" value="b2650954994f5992688bd88a33ec51a6" />
     <add key="WeChatMerchantId" value="" />
     <add key="WeChatMerchantKey" value="" />
     <add key="StorageConnectionString" value="" />
