--- a/WebApp/DataAccess/DataAccess.csproj
+++ b/WebApp/DataAccess/DataAccess.csproj
@@ -117,6 +117,7 @@
       <LastGenOutput>TasteContext.Context.cs</LastGenOutput>
       <DependentUpon>TasteContext.edmx</DependentUpon>
     </Content>
+    <Content Include="TasteContext.edmx.sql" />
     <Content Include="TasteContext.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>TasteContext.edmx</DependentUpon>
