update merchantid and merchantkey

--- a/WebApp/WebApp/Web.config
+++ b/WebApp/WebApp/Web.config
@@ -14,8 +14,8 @@
   <appSettings>
     <add key="WeChatMiniProgramAppId" value="wx85137f0c169973eb" />
     <add key="WeChatMiniProgramAppSecret" value="b2650954994f5992688bd88a33ec51a6" />
-    <add key="WeChatMerchantId" value="" />
-    <add key="WeChatMerchantKey" value="" />
+    <add key="WeChatMerchantId" value="1504101191" />
+    <add key="WeChatMerchantKey" value="TxNGVSXMTCh5OMeV7UnBkJw0qQCUABRD" />
     <add key="StorageConnectionString" value="" />
     <add key="Container" value="" />
     <add key="owin:AutomaticAppStartup" value="false" />
