--- a/WebApp/DataAccess/DataAccess.csproj
+++ b/WebApp/DataAccess/DataAccess.csproj
@@ -75,6 +75,9 @@
     <Compile Include="Preference.cs">
       <DependentUpon>TasteContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="Preference1.cs">
+      <DependentUpon>TasteContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Restaurant.cs">
       <DependentUpon>TasteContext.tt</DependentUpon>
